--- a/Functions in JS/multiplicaion.html
+++ b/Functions in JS/multiplicaion.html
@@ -10,8 +10,10 @@
             function multiply() {
 var a = 3;
 
-var c = 7;
-document.getElementById("demo").innerHTML = b * a * c
+var c = 5;
+
+var d = 10;
+document.getElementById("demo").innerHTML = b * a * c * d
 
             }
            document.getElementById("demo1").innerHTML = a;
