--- a/palindromeApp/index. in JS.html
+++ b/palindromeApp/index. in JS.html
@@ -1,6 +1,6 @@
 <h2>JavaScript Palindrome Checking Function</h2>
  
-<button onclick=" palindrome("madam")">Click Me</button>
+<button onclick="palindrome('madam')">Click Me</button>
 
 
 <script>
@@ -13,7 +13,7 @@
     // to check palindrome or not the string needs to be reversed so we are 
     //reversing it by splitting and rejoining it
 
-    var reversedInput = input.slit('').reverse().join('');
+    var reversedInput = input.split('').reverse().join('');
 
     // checking for palindrome
     if(input === reversedInput){
@@ -25,6 +25,6 @@
     }
 }
 // invoking function
-palindrome("madam")
+//palindrome("madam")
 
 </script>
