--- a/navigation/Navigation.html
+++ b/navigation/Navigation.html
@@ -27,16 +27,32 @@ body{
     color:black;
 }
 
+.footer  {
+    position :fixed;
+    left:0;
+    bottom:0;
+    width:100%;
+    background-color:#000000;
+    color:white;
+    text-align: center
+}
     </style>
 </head>
 <body>
+  
     
-</body>
+
 <div class="topnav">
 
    <a class = "active" href="#home">Home</a>
    <a href="#">About Us</a>
    <a href="#">Gallery</a>
    <a href="#">Contact us</a>
+
 </div>
+
+<div class="footer">
+    <p>@copy all rights and reserved by Swati Singh</p>
+</div>
+</body>
 </html>
