--- a/navigation/Navigation.html
+++ b/navigation/Navigation.html
@@ -57,8 +57,28 @@ body{
     <p>@copy all rights and reserved by Saiyur Singh</p>
 </div>
 
+
+<P>Pizza</P>
+
+<p>
+    <p><img src="pizza.webp2" style="width:170;height:170px;margin-left:15px; float:right "> 
+   Pizza is  a dish of Italian origin, consisting of a flat round base of dough
+    baked with a topping of tomatoes and cheese, typically with added meat, fish,
+ or vegetables.
+</p>
+
+
+<hr>
+<p>Pizza</p>
+
+<p><img src="pizza.webp1" style="width:170;height:170px;margin-right:15px ; float:left "> 
+    Pizza is  a dish of Italian origin, consisting of a flat round base of dough
+    baked with a topping of tomatoes and cheese, typically with added meat, fish,
+ or vegetables.
+</p>
+
 <section>
-    <img class="mySlides" src="pic 2.jpg" style="height:500px;">
+    <img class="mySlides" src="" style="height:500px;">
     <img class="mySlides" src="  "  style="height:500px;">
     
 </section>
